--- a/test_jl.ipynb
+++ b/test_jl.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
        "\u001b[36m                                                             543 columns omitted"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -666,40 +666,6 @@
       "   3 │ 3        TCH-3     2009-01-25T00:00:00Z  2009-01-25T00:00:00Z  2009-07-23T00:00:00Z  2010-01-14T00:00:00Z  2010-07-08T00:00:00Z  2011-01-27T00:00:00Z  2011-07-14T00:00:00Z  2012-01-19T00:00:00Z  2012-07-19T00:00:00Z  2012-12-27T00:00:00Z  2013-07-18T00:00:00Z  2014-01-09T00:00:00Z  2014-07-03T00:00:00Z  2014-12-26T00:00:00Z  2015-08-06T00:00:00Z  NA                    NA         NA         NA         NA         NA         NA         NA         NA         2015-08-06T00:00:00Z  2015-12-31T00:00:00Z  0         NA           2015-12-31T00:00:00Z  0         NA           2015-12-31T00:00:00Z       0  NA         0         0         0         NA         0         0         0         NA         0         NA         NA       1          1940-04-28T00:00:00Z  68        161       55        21.2      67        7000      0         0              0.0       1.0  1         0         1         1         0         0         0         1         0         0         2         146       168       151       145       155       120       NA        159       138       120       134       135       134       140       NA        NA        NA        NA        NA        NA        NA        NA        NA        87        83        75        80        82        68        NA        74        79        77        76        83        59        84        NA        NA        NA        NA        NA        NA        NA        NA        NA        76        81        75        77        89        85        NA        89        88        78        87        90        82        79        NA        NA        NA        NA        NA        NA        NA        NA        NA        216       158       186       166       168       160       153       163       144       155       150       163       152       161       NA        NA        NA        NA        NA        NA        NA        NA        NA        59        55        57        56        52        48        43        47        43        46        40        45        44        44        NA        NA        NA        NA        NA        NA        NA        NA        NA        149       71        68        91        116       98        85        108       111       155       178       92        163       106       NA        NA        NA        NA        NA        NA        NA        NA        NA        127       89        115       92        93        92        93        94        79        78        74        100       75        96        NA        NA        NA        NA        NA        NA        NA        NA        NA        242       144       116       175       184       171       202       237       125       220       211       201       151       225       NA        NA        NA        NA        NA        NA        NA        NA        NA        6.7       6.1       6         6.3       6.3       6.4       6.7       6.4       6.3       6.8       6.8       6.8       6.7       7.2       NA        NA        NA        NA        NA        NA        NA        NA        NA        7.1       6.5       6.4       6.7       6.7       6.8       7.1       6.8       6.6       7.1       7.1       7.1       7         7.5       NA        NA        NA        NA        NA        NA        NA        NA        NA        0.71      NA        0.77      NA        0.75      NA        0.8       NA        0.69      NA        0.88      NA        0.78      0.83      NA        NA        NA        NA        NA        NA        NA        NA        NA        84.1      NA        76.6      NA        78.5      NA        72.9      NA        85.3      NA        65.1      NA        74        69.2      NA        NA        NA        NA        NA        NA        NA        NA        NA        1         1         1         1         1         1         1         1         1         1         1         1         1         1         NA        NA        NA        NA        NA        NA        NA        NA        NA             0  0         0         0         0         0         0         0         NA        NA        NA        NA        NA        1         0         1         1         1         1         1         NA        NA        NA        NA        NA        0         0         0         0         0         0         0         NA        NA        NA        NA        NA        1         0         1         0         0         0         0         NA        NA        NA        NA        NA        0         0         0         0         0         0         1         NA        NA        NA        NA        NA        0         0         0         1         1         1         1         NA        NA        NA        NA        NA        0         0         0         0         0         0         0         NA        NA        NA        NA        NA        0         0         0         0         0         0         0         NA        NA        NA        NA        NA        0         0         0         0         0         0         0         NA        NA        NA        NA        NA             1       1       0        0       0       0       0       0  0              0       0       0  1         1         1               0       0       0        0       0       0       0               15             2531               15             2531         15       2531         2531       15     2531       2531       15     2531       2531        15      2531               15             2531             15           2531             15           2531            15  2531          1              0     179     354     529     732     900    1089    1271    1432     1635     1810     1985     2161     2384     2556     2739     2922     3104     3287     3469     3652     3835     4017"
      ]
     },
-    {
-     "ename": "LoadError",
-     "evalue": "ArgumentError: idxs[1] has type DataType; only Integer, Symbol, or string values allowed when indexing by vector. Maybe you wanted to use `Cols` instead?",
-     "output_type": "error",
-     "traceback": [
-      "ArgumentError: idxs[1] has type DataType; only Integer, Symbol, or string values allowed when indexing by vector. Maybe you wanted to use `Cols` instead?",
-      "",
-      "Stacktrace:",
-      " [1] getindex",
-      "   @ /opt/julia/packages/DataFrames/58MUJ/src/other/index.jl:291 [inlined]",
-      " [2] names(df::DataFrame, cols::Vector{DataType})",
-      "   @ DataFrames /opt/julia/packages/DataFrames/58MUJ/src/abstractdataframe/abstractdataframe.jl:102",
-      " [3] top-level scope",
-      "   @ In[24]:9"
-     ]
-    }
-   ],
-   "source": [
-    "# Show all columns in jpyter\n",
-    "show(dat[1:3, :], allcols = true)\n",
-    "# Select columns by regex\n",
-    "@chain dat begin\n",
-    "    @select(contains(\"eGFR\"))\n",
-    "    @slice(1:5)\n",
-    "end\n",
-    "# select columns by types\n",
-    "select(dat, findall(col -> all(v -> v isa String31 || v isa String7, col), eachcol(dat)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
     {
      "data": {
       "text/html": [
@@ -774,7 +740,63 @@
        "\u001b[36m                                                 7 columns and 7717 rows omitted"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Show all columns in jpyter\n",
+    "show(dat[1:3, :], allcols = true)\n",
+    "# Select columns by regex\n",
+    "@chain dat begin\n",
+    "    @select(contains(\"eGFR\"))\n",
+    "    @slice(1:5)\n",
+    "end\n",
+    "# Select columns by regex\n",
+    "@chain dat begin\n",
+    "    @select(findall(col -> all(v -> v isa String31 || v isa String7, col), eachcol(dat)))\n",
+    "    @slice(1:5)\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><div style = \"float: left;\"><span>5×10 DataFrame</span></div><div style = \"clear: both;\"></div></div><div class = \"data-frame\" style = \"overflow-x: scroll;\"><table class = \"data-frame\" style = \"margin-bottom: 6px;\"><thead><tr class = \"header\"><th class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">Row</th><th style = \"text-align: left;\">No</th><th style = \"text-align: left;\">Edate</th><th style = \"text-align: left;\">Fdate_1</th><th style = \"text-align: left;\">Fdate_2</th><th style = \"text-align: left;\">Fdate_3</th><th style = \"text-align: left;\">Fdate_4</th><th style = \"text-align: left;\">Fdate_5</th><th style = \"text-align: left;\">Fdate_6</th><th style = \"text-align: left;\">Fdate_7</th><th style = \"text-align: left;\">Fdate_8</th></tr><tr class = \"subheader headerLastRow\"><th class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\"></th><th title = \"String7\" style = \"text-align: left;\">String7</th><th title = \"String31\" style = \"text-align: left;\">String31</th><th title = \"String31\" style = \"text-align: left;\">String31</th><th title = \"String31\" style = \"text-align: left;\">String31</th><th title = \"String31\" style = \"text-align: left;\">String31</th><th title = \"String31\" style = \"text-align: left;\">String31</th><th title = \"String31\" style = \"text-align: left;\">String31</th><th title = \"String31\" style = \"text-align: left;\">String31</th><th title = \"String31\" style = \"text-align: left;\">String31</th><th title = \"String31\" style = \"text-align: left;\">String31</th></tr></thead><tbody><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">1</td><td style = \"text-align: left;\">1</td><td style = \"text-align: left;\">2012-05-23T00:00:00Z</td><td style = \"text-align: left;\">2012-05-23T00:00:00Z</td><td style = \"text-align: left;\">2012-11-30T00:00:00Z</td><td style = \"text-align: left;\">2013-05-31T00:00:00Z</td><td style = \"text-align: left;\">2013-11-29T00:00:00Z</td><td style = \"text-align: left;\">2014-03-07T00:00:00Z</td><td style = \"text-align: left;\">2014-11-15T00:00:00Z</td><td style = \"text-align: left;\">NA</td><td style = \"text-align: left;\">NA</td></tr><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">2</td><td style = \"text-align: left;\">2</td><td style = \"text-align: left;\">2008-06-27T00:00:00Z</td><td style = \"text-align: left;\">2008-06-27T00:00:00Z</td><td style = \"text-align: left;\">2008-10-01T00:00:00Z</td><td style = \"text-align: left;\">2009-07-01T00:00:00Z</td><td style = \"text-align: left;\">NA</td><td style = \"text-align: left;\">NA</td><td style = \"text-align: left;\">NA</td><td style = \"text-align: left;\">NA</td><td style = \"text-align: left;\">2011-12-28T00:00:00Z</td></tr><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">3</td><td style = \"text-align: left;\">3</td><td style = \"text-align: left;\">2009-01-25T00:00:00Z</td><td style = \"text-align: left;\">2009-01-25T00:00:00Z</td><td style = \"text-align: left;\">2009-07-23T00:00:00Z</td><td style = \"text-align: left;\">2010-01-14T00:00:00Z</td><td style = \"text-align: left;\">2010-07-08T00:00:00Z</td><td style = \"text-align: left;\">2011-01-27T00:00:00Z</td><td style = \"text-align: left;\">2011-07-14T00:00:00Z</td><td style = \"text-align: left;\">2012-01-19T00:00:00Z</td><td style = \"text-align: left;\">2012-07-19T00:00:00Z</td></tr><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">4</td><td style = \"text-align: left;\">4</td><td style = \"text-align: left;\">2012-04-26T00:00:00Z</td><td style = \"text-align: left;\">2012-04-26T00:00:00Z</td><td style = \"text-align: left;\">2012-10-12T00:00:00Z</td><td style = \"text-align: left;\">NA</td><td style = \"text-align: left;\">2014-01-25T00:00:00Z</td><td style = \"text-align: left;\">NA</td><td style = \"text-align: left;\">2014-11-05T00:00:00Z</td><td style = \"text-align: left;\">2015-02-27T00:00:00Z</td><td style = \"text-align: left;\">2015-10-20T00:00:00Z</td></tr><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">5</td><td style = \"text-align: left;\">5</td><td style = \"text-align: left;\">2012-03-14T00:00:00Z</td><td style = \"text-align: left;\">2012-03-14T00:00:00Z</td><td style = \"text-align: left;\">NA</td><td style = \"text-align: left;\">2013-04-15T00:00:00Z</td><td style = \"text-align: left;\">NA</td><td style = \"text-align: left;\">NA</td><td style = \"text-align: left;\">2014-06-26T00:00:00Z</td><td style = \"text-align: left;\">NA</td><td style = \"text-align: left;\">2015-10-01T00:00:00Z</td></tr></tbody></table></div>"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{r|cccccc}\n",
+       "\t& No & Edate & Fdate\\_1 & Fdate\\_2 & Fdate\\_3 & \\\\\n",
+       "\t\\hline\n",
+       "\t& String7 & String31 & String31 & String31 & String31 & \\\\\n",
+       "\t\\hline\n",
+       "\t1 & 1 & 2012-05-23T00:00:00Z & 2012-05-23T00:00:00Z & 2012-11-30T00:00:00Z & 2013-05-31T00:00:00Z & $\\dots$ \\\\\n",
+       "\t2 & 2 & 2008-06-27T00:00:00Z & 2008-06-27T00:00:00Z & 2008-10-01T00:00:00Z & 2009-07-01T00:00:00Z & $\\dots$ \\\\\n",
+       "\t3 & 3 & 2009-01-25T00:00:00Z & 2009-01-25T00:00:00Z & 2009-07-23T00:00:00Z & 2010-01-14T00:00:00Z & $\\dots$ \\\\\n",
+       "\t4 & 4 & 2012-04-26T00:00:00Z & 2012-04-26T00:00:00Z & 2012-10-12T00:00:00Z & NA & $\\dots$ \\\\\n",
+       "\t5 & 5 & 2012-03-14T00:00:00Z & 2012-03-14T00:00:00Z & NA & 2013-04-15T00:00:00Z & $\\dots$ \\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/plain": [
+       "\u001b[1m5×10 DataFrame\n",
+       "\u001b[1m Row │\u001b[1m No      \u001b[1m Edate                \u001b[1m Fdate_1              \u001b[1m Fdate_2            ⋯\n",
+       "     │\u001b[90m String7 \u001b[90m String31             \u001b[90m String31             \u001b[90m String31           ⋯\n",
+       "─────┼──────────────────────────────────────────────────────────────────────────\n",
+       "   1 │ 1        2012-05-23T00:00:00Z  2012-05-23T00:00:00Z  2012-11-30T00:00:0 ⋯\n",
+       "   2 │ 2        2008-06-27T00:00:00Z  2008-06-27T00:00:00Z  2008-10-01T00:00:0\n",
+       "   3 │ 3        2009-01-25T00:00:00Z  2009-01-25T00:00:00Z  2009-07-23T00:00:0\n",
+       "   4 │ 4        2012-04-26T00:00:00Z  2012-04-26T00:00:00Z  2012-10-12T00:00:0\n",
+       "   5 │ 5        2012-03-14T00:00:00Z  2012-03-14T00:00:00Z  NA                 ⋯\n",
+       "\u001b[36m                                                               7 columns omitted"
+      ]
+     },
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
